simple-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-frontend-service
spec:
  selector:
    app: simple-frontend
  ports:
  - port: 80
    targetPort: 80
